--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     <main>
         <section id="about-me">
             <div class="container">
-                <div class="container__item container__item_width_l container__item_image_paul-bw shadow_top-left-pink">
-                    <div class="overlay overlay_pink-gr-top-left"></div>
+                <div class="container__item shadow_top-left-pink no-padding">
+                    <div class="portrait">
+                        <div class="overlay overlay_pink-gr-top-left"></div>
+                    </div>
                 </div>
                 <div class="container__item container__item_width_l
                 shadow_bottom-right-pink overlay_pink-gr-bottom-right">
@@ -93,7 +95,7 @@
 
         <section id="contacts">
             <div class="container">
-                <div class="container__item container__item_width_xl background_color_pink background_curve_m container_no-height-restrict">
+                <div class="container__item container__item_width_xl background_color_pink background_curve_m">
                     <h2 class="text_subtitle">
                         How to (not) contact me?
                     </h2>
