--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <ul class="list-vertical">
                         <li class="list-vertical_item background_color_white background_curve_s">
                             <img src="img/phone-logo.png" alt="phone" class="inner-image">
-                            <p class="text_paragraph text_color_pink">+7 (800) 555-35-35</p>
+                            <p class="text_paragraph text_color_pink">8 (800) 555-35-35</p>
                         </li>
                         <li class="list-vertical_item background_color_white background_curve_s">
                             <img src="img/email-logo.png" alt="email" class="inner-image">
